--- a/Teenager Heroes/vehicles.html
+++ b/Teenager Heroes/vehicles.html
@@ -436,23 +436,23 @@ body {
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -466,9 +466,9 @@ body {
      <li>
        <a href="../project.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="../client.html">
@@ -480,9 +480,9 @@ body {
      <li>
        <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="../api.html">
@@ -494,9 +494,9 @@ body {
      <li>
        <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -505,13 +505,13 @@ body {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
   <h1 style="color:red;">Teenager Heroes</h1>
-  <a href="index.html"><i class='bx bx-home'></i> Home</a>
-  <a href="about.html"><i class='bx bxs-info-circle' ></i> About</a>
-  <a href="news.html"><i class='bx bx-news' ></i> News</a>
-  <a href="character.html"><i class='bx bx-male-female'></i> Character</a>
-  <a href="locations.html"><i class='bx bx-location-plus'></i> Locations</a>
-  <a href="story.html"><i class='bx bx-book' ></i> Story</a>
-  <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Vehicles</a>
+<a href="index.html"><i class='bx bx-home'></i> Accueil</a>
+   <a href="about.html"><i class='bx bxs-info-circle' ></i> À propos</a>
+   <a href="news.html"><i class='bx bx-news' ></i> Actualités</a>
+   <a href="character.html"><i class='bx bx-male-female'></i> Personnage</a>
+   <a href="locations.html"><i class='bx bx-location-plus'></i> Emplacements</a>
+   <a href="story.html"><i class='bx bx-book' ></i> Histoire</a>
+   <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Véhicules</a>
   </div>
 </div>
 
@@ -523,26 +523,26 @@ body {
 </div>
 <br>
 <div>
-<h1>Vehicles</h1>
-<p>Teenager Heroes book series contains many awesome vehicles too! Teenager Heroes book series featured many awesome vehicles developed by Teenager Heroes team for characters inside Teenager Heroes book series. </p>
+<h1>Véhicules</h1>
+<p>La série de livres Teenager Heroes contient également de nombreux véhicules géniaux ! La série de livres Teenager Heroes comprenait de nombreux véhicules impressionnants développés par l'équipe Teenager Heroes pour les personnages de la série de livres Teenager Heroes. </p>
 <br>
 <button type="button" class="collapsible2"><h2>Hover Car</h2></button>
 <div class="content2">
-<p>Hover Car is a vehicle owned by Li Hui and Hu Jie as a way to get around. It could fly around the city and even to outer space. The Hover Car was invented by Li Hui and Hu Jie when they were 11.</p>
+<p>Hover Car est un véhicule appartenant à Li Hui et Hu Jie pour se déplacer. Il pourrait voler autour de la ville et même dans l'espace. Le Hover Car a été inventé par Li Hui et Hu Jie quand ils avaient 11 ans.</p>
 <br>
-<p>Hover Car could go underwater and fly to space. It could help Li Hui and Hu Jie go underwater in the city river to discover and stop villains. Hover Car offers many awesome features and abilities for Li Hui and Hu Jie. All the features are listed below:</p>
+<p>Hover Car pourrait aller sous l'eau et voler dans l'espace. Cela pourrait aider Li Hui et Hu Jie à aller sous l'eau dans la rivière de la ville pour découvrir et arrêter les méchants. Hover Car offre de nombreuses fonctionnalités et capacités impressionnantes pour Li Hui et Hu Jie. Toutes les fonctionnalités sont répertoriées ci-dessous :</p>
 <br>
-<li>Flying: Hover Car could fly around Perle, bringing Li Hui and Hu Jie to any place they want.</li>
+<li>Voler : Hover Car peut voler autour de Perle, amenant Li Hui et Hu Jie à n'importe quel endroit de leur choix.</li>
 <br>
-<li>Submarine: Hover Car could also go underwater like a submarine. The Hover Car could bring Li Hui and Hu Jie into the deepest place underwater.</li>
+<li>Sous-marin : Hover Car peut également aller sous l'eau comme un sous-marin. L'aéroglisseur pourrait amener Li Hui et Hu Jie au plus profond de l'eau.</li>
 <br>
-<li>Speed: Hover Car could go super fast in the sky, underwater and on land to deliver Li Hui and Hu Jie to anywhere.</li>
+<li>Vitesse : l'aéroglisseur peut aller très vite dans le ciel, sous l'eau et sur terre pour livrer Li Hui et Hu Jie n'importe où.</li>
 </div>
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
