--- a/project.html
+++ b/project.html
@@ -362,26 +362,27 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+<div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
+     <li>
      <li>
        <a href="documentation.html">
          <i class='bx bxs-info-square'></i>
@@ -391,11 +392,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -407,9 +408,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -421,25 +422,25 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
-<h1>Projects</h1>
-<p>JstMStudio currently has many projects developed by many of our child teams. There are many projects in JstMStudio. All of our projects is currently actively maintained by its respective child teams. </p>
+<h1>Projets</h1>
+<p>Jst polyvalent lieu de travail a actuellement de nombreux projets développés par plusieurs de nos équipes d'enfants. Il existe de nombreux projets dans JstMStudio. Tous nos projets sont actuellement activement maintenus par leurs équipes d'enfants respectives. </p>
 <br>
-<p>All of the projects developed by JstMStudio Web Development Team will not be listed here due to it been integrated with this website. For each and all of our other project, please click on the button below for the specific project to know more about it.</p>
+<p>Tous les projets développés par l'équipe de développement Web de Jst polyvalent lieu de travail ne seront pas répertoriés ici car ils ont été intégrés à ce site Web. Pour chacun de nos autres projets, veuillez cliquer sur le bouton ci-dessous pour le projet spécifique pour en savoir plus.</p>
 <br>
-<a href="Teenager Heroes/"><button class="button"><span>Teenager Heroes </span></button></a>
+<a href="Teenager Heroes/"><button class="button"><span>Héros adolescents </span></button></a>
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
